all queries done

--- a/queries/templates/queries/querytemplate.html
+++ b/queries/templates/queries/querytemplate.html
@@ -27,9 +27,9 @@
         <a href="/queries/query3" style="text-decoration: none; margin-top: 1px"><li>Товар в точке</li></a>
         <a href="/queries/query4" style="text-decoration: none; margin-top: 1px"><li>Сведения об объёме и ценах</li></a>
         <a href="/queries/query5" style="text-decoration: none; margin-top: 1px"><li>Выработка на одного продавца</li></a>
-        <a href="/queries/query6" style="text-decoration: none; margin-top: 1px"><li>Оборудование, Распр.</li></a>
-        <a href="/queries/query7" style="text-decoration: none; margin-top: 1px"><li>Оборудование, Исп.</li></a>
-        <a href="/queries/query8" style="text-decoration: none; margin-top: 1px"><li>Участие Сотрудников</li></a>
+        <a href="/queries/query6" style="text-decoration: none; margin-top: 1px"><li>Выработка одного продавца</li></a>
+        <a href="/queries/query7" style="text-decoration: none; margin-top: 1px"><li>Продажи продукта</li></a>
+        <a href="/queries/query8" style="text-decoration: none; margin-top: 1px"><li>Данные о зп сотрудников</li></a>
         <a href="/queries/query9" style="text-decoration: none; margin-top: 1px"><li>Субподрядчики</li></a>
         <a href="/queries/query10" style="text-decoration: none; margin-top: 1px"><li>Участие в Проекте</li></a>
         <a href="/queries/query11" style="text-decoration: none; margin-top: 1px"><li>Оборудование, Эффект.</li></a>
