--- a/queries/templates/queries/querytemplate.html
+++ b/queries/templates/queries/querytemplate.html
@@ -28,14 +28,15 @@
         <a href="/queries/query4" style="text-decoration: none; margin-top: 1px"><li>Сведения об объёме и ценах</li></a>
         <a href="/queries/query5" style="text-decoration: none; margin-top: 1px"><li>Выработка на одного продавца</li></a>
         <a href="/queries/query6" style="text-decoration: none; margin-top: 1px"><li>Выработка одного продавца</li></a>
-        <a href="/queries/query7" style="text-decoration: none; margin-top: 1px"><li>Продажи продукта</li></a>
+        <a href="/queries/query7" style="text-decoration: none; margin-top: 1px"><li>Продажи товара</li></a>
         <a href="/queries/query8" style="text-decoration: none; margin-top: 1px"><li>Данные о зп сотрудников</li></a>
-        <a href="/queries/query9" style="text-decoration: none; margin-top: 1px"><li>Субподрядчики</li></a>
-        <a href="/queries/query10" style="text-decoration: none; margin-top: 1px"><li>Участие в Проекте</li></a>
-        <a href="/queries/query11" style="text-decoration: none; margin-top: 1px"><li>Оборудование, Эффект.</li></a>
-        <a href="/queries/query12" style="text-decoration: none; margin-top: 1px"><li>Договоры, Эффект.</li></a>
-        <a href="/queries/query13" style="text-decoration: none; margin-top: 1px"><li>Участие в Проектах</li></a>
-        <a href="/queries/query14" style="text-decoration: none; margin-top: 1px"><li>Проекты, Эффект.</li></a>
+        <a href="/queries/query9" style="text-decoration: none; margin-top: 1px"><li>Сведения о поставках товара</li></a>
+        <a href="/queries/query10" style="text-decoration: none; margin-top: 1px"><li>Объем продаж</li></a>
+        <a href="/queries/query11" style="text-decoration: none; margin-top: 1px"><li>Рентабельности точки</li></a>
+        <a href="/queries/query12" style="text-decoration: none; margin-top: 1px"><li>Сведения о поставках товаров</li></a>
+        <a href="/queries/query13" style="text-decoration: none; margin-top: 1px"><li>Сведения о покупателях</li></a>
+        <a href="/queries/query14" style="text-decoration: none; margin-top: 1px"><li>Наиболее активные покупатели</li></a>
+        <a href="/queries/query15" style="text-decoration: none; margin-top: 1px"><li>Данные о товарообороте точки</li></a>
     </ul>
 </aside>
 
