--- a/queries/templates/queries/query10.html
+++ b/queries/templates/queries/query10.html
@@ -1,15 +1,14 @@
 {% extends 'queries/querytemplate.html' %}
 
-{% block title %}<h3>5 Получить данные о выработке на одного продавца за указанный период по всем торговым
-точкам, по торговым точкам заданного типа.
-
+{% block title %}<h3>10 Получить данные об отношении объема продаж к объему торговых площадей, либо к числу
+торговых залов, либо к числу прилавков по торговым точкам указанного типа
     </h3>{% endblock %}
 
 {% block content %}
     {% if warning %}
     <h3> {{ warning }} </h3>
     {% endif %}
-    <form class="form" action="{% url 'query5' %}" method="post">
+    <form class="form" action="{% url 'query10' %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" style="margin-bottom: 1%">Поиск</button>
@@ -23,8 +22,8 @@
 
     {% for i in data %}
         <tr>
-            <td style="padding: 0 6px 0 6px">{{ i.trade_point_name }}</td>
-            <td style="padding: 0 6px 0 6px">{{ i.profit }}</td>
+            <td style="padding: 0 6px 0 6px">{{ i.point_name }}</td>
+            <td style="padding: 0 6px 0 6px">{{ i.profit_div }}</td>
         </tr>
     {% endfor %}
     </table>
