--- a/queries/templates/queries/query12.html
+++ b/queries/templates/queries/query12.html
@@ -1,14 +1,13 @@
 {% extends 'queries/querytemplate.html' %}
 
-{% block title %}<h3>6 Получить данные о выработке отдельно взятого продавца отдельно взятой торговой точки
-за указанный период.
+{% block title %}<h3>12 Получить сведения о поставках товаров по указанному номеру заказа.
     </h3>{% endblock %}
 
 {% block content %}
     {% if warning %}
     <h3> {{ warning }} </h3>
     {% endif %}
-    <form class="form" action="{% url 'query6' %}" method="post">
+    <form class="form" action="{% url 'query12' %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" style="margin-bottom: 1%">Поиск</button>
@@ -16,14 +15,16 @@
 
     <table class="table-bordered" style="text-align: center">
     {% if data %}
-        <td style="padding: 0 6px 0 6px">Employee</td>
-        <td style="padding: 0 6px 0 6px">Profit</td>
+        <td style="padding: 0 6px 0 6px">Product</td>
+        <td style="padding: 0 6px 0 6px">Price</td>
+        <td style="padding: 0 6px 0 6px">Amount</td>
     {% endif %}
 
     {% for i in data %}
         <tr>
             <td style="padding: 0 6px 0 6px">{{ i.name }}</td>
-            <td style="padding: 0 6px 0 6px">{{ i.profit }}</td>
+            <td style="padding: 0 6px 0 6px">{{ i.price }}</td>
+            <td style="padding: 0 6px 0 6px">{{ i.amount }}</td>
         </tr>
     {% endfor %}
     </table>
